--------------------------------------------------------------------------------
    Added   (12.08.2016): resp. config keywords in context help
    Added   (08.08.2016): some informations about the data source is added as
                          comment within the header of RINEX navigation files
    Added   (21.07.2016): frequency specific signal priorities are added for
                          RINEX version 3 to RINEX version 2 conversion
    Added   (29.06.2016): consideration of provioder ID changes in SSR streams
                          during PPP analysis
    Added   (18.05.2016): expected observations in RINEX QC
    Changed (28.07.2016): small adaptations in qwtpolar sources to allow the
                          successful comilation of BNC on a Raspberry Pi, see
                          http://software.rtcm-ntrip.org/ticket/88
    Changed (21.07.2016): Default signal priority list
    Changed (08.06.2016): weighting factor for GLONASS phase observations
                          is now enlarged
    Changed (27.05.2016): RINEX 2.11 ephemeris output for an unknown
                          transmission time is set to 0.000000000000e+00
    Changed (23.05.2016): the real satellite visibility is considered now,
                          if the expected observations are computed in RINEX QC
    Changed (12.05.2016): limits for spherical harmonics degree and order extended
    Changed (28.04.2016): ephemeris upload is extended to allow an upload of more
                          than one stream and to choose a single satellite system
    Fixed   (12.08.2016): check regarding wrong observation epochs is done during
                          latency check as well to prevent erroneous latencies
    Fixed   (08.06.2016): map generation from sourcetable entry
    Fixed   (02.06.2016): the approach how to wait for clock corrections
                          in PPP mode, which was well proven in BNC verson 2.11
                          is re-implemented