@@ -4036,13 +4036,13 @@ To: 1994.0
 </p>
 
 <p>
-<u>SIRGAS2000:</u> The formulas for the transformation 'ITRF2008-&gt;SIRGAS2000' were provided via personal communication from CGED-Coordenacao de Geodesia, IBGE/DGC - Diretoria de Geociencias, Brazil.</u>.
+<u>SIRGAS2000:</u> The formulas for the transformation 'IGb14-&gt;SIRGAS2000' were provided via personal communication from CGED-Coordenacao de Geodesia, IBGE/DGC - Diretoria de Geociencias, Brazil.</u>.
 </p>
 <p>
 <pre>
-Translation in X at epoch To:  0.0020 m
-Translation in Y at epoch To:  0.0041 m
-Translation in Z at epoch To:  0.0039 m
+Translation in X at epoch To:  0.0026 m
+Translation in Y at epoch To:  0.0018 m
+Translation in Z at epoch To: -0.0061 m
 Translation rate in X:  0.0000 m/y
 Translation rate in Y:  0.0000 m/y
 Translation rate in Z:  0.0000 m/y
